--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\BootstrapFreindlyDynamicData\packages.config" />
   <repository path="..\BootstrapFriendlyDynamicData\packages.config" />
+  <repository path="..\TestWebSite\packages.config" />
 </repositories>
