Updated list of control I am going to build

--- a/NotAClue.Web.UI.BootstrapWebControls/NotAClue.Web.UI.BootstrapWebControls.csproj
+++ b/NotAClue.Web.UI.BootstrapWebControls/NotAClue.Web.UI.BootstrapWebControls.csproj
@@ -63,6 +63,10 @@
     <Content Include="Menu\BootstrapMenu.ico" />
     <Content Include="Tabs\BootstrapTabs.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Breadcrumb\" />
+    <Folder Include="ModalWindow\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
