--- a/NotAClue.Web.UI.BootstrapWebControls/NotAClue.Web.UI.BootstrapWebControls.csproj
+++ b/NotAClue.Web.UI.BootstrapWebControls/NotAClue.Web.UI.BootstrapWebControls.csproj
@@ -54,18 +54,25 @@
     <Compile Include="Menu\BootstrapMenu.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="HelperExtensionMethods.cs" />
+    <Compile Include="ModalDialog\FooterButton.cs" />
+    <Compile Include="ModalDialog\FooterButtonStyle.cs" />
+    <Compile Include="ModalDialog\FooterButtonType.cs" />
+    <Compile Include="ModalDialog\BootstrapModalDialog.cs" />
+    <Compile Include="ModalDialog\BootstrapModalSizes.cs" />
+    <Compile Include="ModalDialog\FooterButtonCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tabs\BootstrapTabs.cs" />
     <Compile Include="Tabs\Tab.cs" />
     <Compile Include="Tabs\TabCollection.cs" />
+    <Compile Include="wwWebTabControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Menu\BootstrapMenu.ico" />
+    <Content Include="ModalDialog\BootstrapModalDialog.ico" />
     <Content Include="Tabs\BootstrapTabs.ico" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Breadcrumb\" />
-    <Folder Include="ModalWindow\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
