Updated  some spelling fixes and added some extension methods for using date time picker

--- a/NotAClue.Web.UI.BootstrapWebControls/NotAClue.Web.UI.BootstrapWebControls.csproj
+++ b/NotAClue.Web.UI.BootstrapWebControls/NotAClue.Web.UI.BootstrapWebControls.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NotAClue.Web.UI.BootstrapWebControls</RootNamespace>
     <AssemblyName>NotAClue.Web.UI.BootstrapWebControls</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
     </SccProjectName>
@@ -20,6 +20,7 @@
     <SccProvider>
     </SccProvider>
     <TargetFrameworkProfile />
+    <AssemblyVersion>1.0.16026.1604</AssemblyVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,6 +30,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -37,6 +40,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UpdateAssemblyVersion>True</UpdateAssemblyVersion>
+    <UpdateAssemblyFileVersion>False</UpdateAssemblyFileVersion>
+    <UpdateAssemblyInfoVersion>False</UpdateAssemblyInfoVersion>
+    <AssemblyVersionSettings>None.None.DayOfYearStamp.TimeStamp</AssemblyVersionSettings>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -51,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BootstrapExtensionMethods.cs" />
     <Compile Include="Menu\BootstrapMenu.cs" />
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="HelperExtensionMethods.cs" />
@@ -70,6 +79,7 @@
     <Content Include="Menu\BootstrapMenu.ico" />
     <Content Include="ModalDialog\BootstrapModalDialog.ico" />
     <Content Include="Tabs\BootstrapTabs.ico" />
+    <Content Include="Tabs\JavaScript1.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Breadcrumb\" />
