--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,7 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 /BootstrapWebControls.sln.ide
+/.vs/BootstrapWebControls/v15/Server/sqlite3/db.lock
+/.vs/BootstrapWebControls/v15/Server/sqlite3/storage.ide
+/.vs/BootstrapWebControls/v15/Server/sqlite3/storage.ide-shm
+/.vs/BootstrapWebControls/v15/Server/sqlite3/storage.ide-wal
